feat: - added privacy policy and terms of service pages - added system wide hindi language support - added functionality to delete user account - added consent steps when creating account, listing dataset and submitting for a bounty
